--- a/css/inner-page.css
+++ b/css/inner-page.css
@@ -208,9 +208,317 @@ section.four-sec.about-sussess h4{
 }
 
 
+
+/* PRODUCT PAGE */
+
+.dell-partner{
+    background-color: #27669A;
+    padding: 90px 0;
+    margin-top:90px;
+}
+.dell-partner h3{
+    font-size: 39px;
+    line-height: 39px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-bottom: 40px;
+}
+.dell-partner h4{
+    font-size: 36px;
+    line-height: 36px;
+    padding-bottom: 25px;
+    font-weight: 600;
+}
+
+
+/* product-sec */
+.product-sec{
+    padding: 80px 0 0 0;
+}
+.product-sec h2{
+    font-size: 44px;
+    line-height: 44px;
+    font-weight: 600;
+    color: #27669A;
+}
+.product-sec .content h4{
+    font-size: 28px;
+    line-height: 33px;
+    font-weight: 700;
+    color: #27669A;
+    padding-bottom: 20px;
+}
+.product-sec .content ul{
+    margin: 0;
+}
+.product-sec .content ul li{
+    list-style: square;
+}
+.product-sec .content ul li span, .product-sec .content ul li::marker{
+    color: #1E81A2;
+}
+.product-sec .product-details{
+    padding: 100px 0;
+}
+.product-sec .product-details.bg{
+    background-color: #27669A;
+}
+.product-sec .product-details.bg .content ul li span,.product-sec .product-details.bg .content ul li::marker{
+    color: #87E0FE;
+}
+
+
+
+
+
+
+
+/* SERVICE PAGE */
+
+.service-sec{
+    padding:90px 0 90px 0;
+}
+
+.flip-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    width: 100%;
+    height: 100%;
+}
+
+.flip-box-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    width: 100%;
+    height: 100%;
+}
+
+.flip-box.flipped .flip-box-inner {
+    transform: rotateY(180deg); /* Flip the inner box */
+    cursor: pointer;
+}
+.service-box{
+    background: #EBF5F9;
+    border-radius: 26px;
+    padding: 70px 100px;
+    align-items: center;
+    text-align: center;
+    position: relative;
+}
+.service-box .arrow{
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+}
+.service-box, .service-box-flip {
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.service-box h5{
+    padding-top:10px;
+}
+.service-box-flip {
+    transform: rotateY(180deg);
+    position: absolute;
+    background: #2E70A0;
+    border-radius: 26px;
+    padding: 35px 25px;
+}
+.service-box-flip h4{
+    font-size: 24px;
+    line-height: 28px;
+    text-align: left;
+    font-weight: 600;
+    padding-bottom: 30px;
+}
+.service-box-flip p{
+    font-size: 20px;
+    line-height: 25px;
+    font-weight: 400;
+}
+
+/* our-service-sec */
+
+.our-service-sec{
+    background-color: #266599;
+    padding:90px 0 140px 0;
+}
+.our-service-sec .our-service{
+    background-color: #FFFFFFFC;
+    border-radius: 13px;
+    padding: 70px 20px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    position: relative;
+}
+.our-service-sec .our-service .arrow{
+    position: absolute;
+    top: 15px;
+    right: 20px;
+}
+.our-service-sec .our-service:hover{
+    background-color: #DDF1F8;
+}
+.our-service-sec .our-service h4{
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 35px;
+    padding-bottom: 15px;
+}
+
+/* tools-tech-sec */
+
+.tools-tech-sec{
+    padding:110px 0;
+}
+.tools-tech-sec .common-title h3{
+    max-width: 1000px;
+}
+.tools-tech-sec .tech-logo{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    row-gap: 80px;
+    padding-top: 100px;
+}
+.tools-tech-sec .tech-logo .logos{
+    width: 20%;
+    text-align: center;
+}
+.tools-tech-sec .tech-logo .logos img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+}
+
+
+/* work-sec */
+
+.work-sec{
+    background-color: #27669A;
+    padding:65px 0;
+}
+.work-sec .common-title h3{
+    font-size: 46px;
+    line-height: 58px;
+}
+
+/* dev-process-sec */
+
+.dev-process-sec{
+    padding:90px 0;
+}
+.dev-process-sec h3{
+    color: #27669A;
+    font-size: 28px;
+    line-height: 33px;
+    font-weight: 700;
+}
+.dev-process-sec .development{
+    background: transparent;
+    padding: 40px;
+    border-radius: 15px;
+    width: 100%;
+}
+.dev-process-sec .development:hover{
+    background: #BFEFFF;
+}
+.dev-process-sec .development h4{
+    font-weight: 700;
+    font-size: 27px;
+    line-height: 35px;
+    color: #266599;
+    padding-top:20px;
+}
+.dev-process-sec .development p{
+    font-size: 22px;
+    line-height: 28px;
+    font-weight: 500;
+}
+
+/* popup */
+
+.popup-overlay {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #3273a3ed; /* Black background with transparency */
+    z-index: 1000; /* Sit on top of everything */
+}
+
+.popup-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 60px 80px;
+    border-radius: 10px;
+    width: 100%;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+  
+}
+.popup-content h4{
+    font-size: 40px;
+    line-height: 48px;
+    font-weight: 700;
+    color: #3273A3;
+    padding-bottom: 30px;
+}
+.popup-content p{
+    color: #484848;
+}
+.popup-content .inner-content h5{
+    color: #276699;
+    font-size: 24px;
+    font-weight: 30px;
+    font-weight: 700;
+    padding-bottom: 30px;
+}
+.popup-content .row{
+    padding-top: 50px;
+}
+.popup-content .inner-content p{
+    padding-bottom: 20px;
+    font-size: 22px;
+}
+.popup-content .inner-content {
+    background-color:#DDF1F8;
+    border-radius: 13px;
+    padding: 50px;
+}
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
 @media only screen and (min-width: 1921px) and (max-width: 2200px) {
     .chooes-sec .chooes-content p, .core-value .chooes-content p {
         max-width: 100%;
+    }
+}
+@media only screen and (max-width: 991px) {
+    .common-heading{
+        font-size: 32px;
+        line-height: 42px;
     }
 }
 @media (max-width: 767px) {
@@ -283,5 +591,45 @@ section.four-sec.about-sussess h4{
         font-size: 20px;
         line-height: 26px;
     }
+    .product-sec .content ul li {
+        list-style: square;
+        font-size: 16px;
+        line-height: 22px;
+    }
+    .product-sec .content h4 {
+        font-size: 22px;
+        line-height: 22px;
+        padding-bottom: 15px;
+    }
+    .product-sec .product-details{
+        padding: 50px 0;
+    }
+    .product-sec {
+        padding: 50px 0 0 0;
+    }
+    .product-sec h2 {
+        font-size: 32px;
+        line-height: 32px;
+    }
     
+}
+@media only screen and (max-width: 480px) {
+    .dell-partner h3{
+        font-size: 24px;
+        line-height: 24px;
+        padding-bottom: 25px;
+    }
+    .dell-partner h4 {
+        font-size: 22px;
+        line-height: 24px;
+        padding-bottom: 18px;
+    }
+    .dell-partner p{
+        font-size: 16px;
+        line-height: 22px;
+    }
+    .dell-partner {
+        padding: 50px 0;
+        margin-top: 50px;
+    }
 }
