--- a/css/inner-page.css
+++ b/css/inner-page.css
@@ -388,11 +388,26 @@ section.inner-banner-sec.service::before{
     line-height: 35px;
     padding-bottom: 15px;
 }
-
+body.service-page {
+    overflow-x: hidden;
+}
+section.dev-process-sec:before {
+    content: '';
+    display: block;
+    background: #68B2CF63;
+    width: 700px;
+    height: 700px;
+    border-radius: 100%;
+    position: absolute;
+    right: -100px;
+    top: 0;
+    filter: blur(200px);
+}
 /* tools-tech-sec */
 
 .tools-tech-sec{
     padding:110px 0;
+    position: relative;
 }
 .tools-tech-sec .common-title h3{
     max-width: 1000px;
@@ -431,6 +446,7 @@ section.inner-banner-sec.service::before{
 
 .dev-process-sec{
     padding:90px 0;
+    position: relative;
 }
 .dev-process-sec h3{
     color: #27669A;
@@ -459,7 +475,18 @@ section.inner-banner-sec.service::before{
     line-height: 28px;
     font-weight: 500;
 }
-
+section.tools-tech-sec:before {
+    content: '';
+    display: block;
+    background: #68B2CF63;
+    width: 500px;
+    height: 500px;
+    border-radius: 100%;
+    position: absolute;
+    top: -50px;
+    left: -100px;
+    filter: blur(200px);
+}
 /* popup */
 
 .popup-overlay {
@@ -483,6 +510,8 @@ section.inner-banner-sec.service::before{
     border-radius: 10px;
     width: 100%;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+    max-height: 90vh; /* Limit the popup height to 80% of the viewport */
+        overflow-y: auto;
   
 }
 .popup-content h4{
@@ -658,6 +687,11 @@ section.inner-banner-sec.service::before{
     }
     .service-sec {
         padding: 50px 0 50px 0;
+    }
+    section.dev-process-sec:before{
+        filter: blur(100px);
+        width: 300px;
+        height: 300px;
     }
     
 }
