--- a/css/inner-page.css
+++ b/css/inner-page.css
@@ -1,5 +1,6 @@
 .inner-banner-sec{
     padding: 55px 0 0;
+    margin-top: 150px;
 }
 .common-heading{
     font-size: 40px;
@@ -43,17 +44,17 @@ section.inner-banner-sec:before {
 /* about-sec */
 
 .about-sec{
-    padding:90px 0 0;
+    padding:90px 0 90px;
     position: relative;
 }
 section.about-sec:before {
     display: block;
     content: '';
     background: #68B2CFA1;
-    width: 900px;
-    height: 900px;
+    width: 400px;
+    height: 400px;
     border-radius: 100%;
-    filter: blur(400px);
+    filter: blur(200px);
     position: absolute;
     top: 100px;
     z-index: -1;
@@ -74,8 +75,19 @@ section.about-sec:before {
     color: #4D4E53;
     line-height: 35px;
 }
-
-
+section.intro {
+    background: #266599;
+    padding: 90px 0;
+}
+section.intro .about-text h4{
+    font-size: 33px;
+    font-weight: 600;
+    line-height: 40px;
+    padding-bottom: 35px;
+}
+section.intro .about-text p{
+    padding-bottom: 15px;
+}
 
 /* chooes-sec */
 .chooes-sec{
@@ -129,13 +141,32 @@ section.chooes-sec:after {
     padding-bottom: 15px;
 }
 .chooes-sec .row, .core-value .row{
-    row-gap: 50px;
+    row-gap: 60px;
 }
 .chooes-sec .chooes-content p, .core-value .chooes-content p{
     max-width: 500px;
 }
-
-
+section.achievement{
+    padding: 70px 0;
+    position: relative;
+}
+section.achievement h2{
+    color: #266599;
+    font-weight: 700;
+    padding-bottom: 37px;
+}
+section.achievement:before {
+    content: '';
+    display: block;
+    background: #68B2CF96;
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    position: absolute;
+    top: 0;
+    left: -100px;
+    filter: blur(100px);
+}
 /* core-value */
 
 .core-value{
@@ -557,6 +588,59 @@ section.tools-tech-sec:before {
     width: 60px;
     height: 60px;
 }
+
+/* contact */
+
+section.inner-banner-sec.contact{
+    padding: 70px 0;
+}
+.location{
+    background-color: #266599;
+    padding:70px 0;
+}
+section.location .map h5 {
+    font-size: 28px;
+    font-weight: 600;
+    padding-bottom: 15px;
+}
+section.location .map iframe{
+    border-radius: 20px;
+}
+.contact-details{
+    padding: 70px 0;
+    position: relative;
+}
+section.contact-details a {
+    color: #1E1E1E;
+    font-size: 28px;
+    line-height: 33px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+section.contact-details a span{
+    background: #88E0FFAB;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+section.contact-details:before {
+    content: '';
+    display: block;
+    background: #68B2CF96;
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    position: absolute;
+    top: 0;
+    left: -100px;
+    filter: blur(200px);
+}
+
 @media only screen and (min-width: 1921px) and (max-width: 2200px) {
     .chooes-sec .chooes-content p, .core-value .chooes-content p {
         max-width: 100%;
@@ -577,8 +661,25 @@ section.tools-tech-sec:before {
         font-size: 32px;
         line-height: 42px;
     }
+    .contact-details .row{
+        gap:20px;
+    }
+    .location .row{
+        gap:50px;
+    }
+    section.location .map h5{
+        font-size: 22px;
+        padding-bottom: 10px;
+    }
+    section.location .map p{
+        font-size: 18px;
+        line-height: 24px;
+    }
 }
 @media (max-width: 767px) {
+    .inner-banner-sec{
+        margin-top: 80px;
+    }
     .common-heading{
         font-size: 20px;
         line-height: 27px;
@@ -591,8 +692,8 @@ section.tools-tech-sec:before {
         width: 15px;
         height: 15px;
     }
-    .about-sec {
-        padding: 40px 0 0;
+    .about-sec, section.intro{
+        padding: 40px 0;
     }
     .about-sec .common-title h3{
         font-size: 24px;
@@ -696,7 +797,18 @@ section.tools-tech-sec:before {
         width: 300px;
         height: 300px;
     }
-    
+    .about-sec .row, section.intro .row{
+        row-gap: 20px;
+    }
+    section.intro .about-text h4{
+        font-size: 28px;
+        line-height: 35px;
+        padding-bottom: 20px;
+    }
+    section.contact-details a{
+        font-size: 20px;
+        line-height: 25px;    
+    }
 }
 @media only screen and (max-width: 480px) {
     .dell-partner h3{
@@ -777,5 +889,9 @@ section.tools-tech-sec:before {
     .close-btn{
         top: 15px;
         right: 15px;
+    }
+    section.contact-details a {
+        font-size: 16px;
+        line-height: 20px;
     }
 }
