--- a/css/inner-page.css
+++ b/css/inner-page.css
@@ -1,5 +1,5 @@
 .inner-banner-sec{
-    padding: 55px 0 0;
+    padding: 10px 0 0;
     margin-top: 150px;
 }
 .common-heading{
@@ -340,7 +340,7 @@ section.four-sec.about-sussess h4{
 /* SERVICE PAGE */
 
 .service-sec{
-    padding:90px 0 90px 0;
+    padding:50px 0 50px 0;
 }
 section.inner-banner-sec.service::before{
     background: none;
@@ -470,7 +470,8 @@ section.dev-process-sec:before {
     max-width: 1000px;
 }
 .tools-tech-sec .tech-logo{
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -478,7 +479,7 @@ section.dev-process-sec:before {
     padding-top: 100px;
 }
 .tools-tech-sec .tech-logo .logos{
-    width: 20%;
+    /* width: 20%; */
     text-align: center;
 }
 .tools-tech-sec .tech-logo .logos img {
@@ -708,7 +709,7 @@ section.trandmark p{
 }
 @media (max-width: 767px) {
     .inner-banner-sec{
-        margin-top: 80px;
+        margin-top: 110px;
     }
     .common-heading{
         font-size: 20px;
