--- a/css/style.css
+++ b/css/style.css
@@ -513,6 +513,10 @@ section.fifth-sec {
     row-gap:40px;
     padding:0
 }
+.fifth-sec .service.active-border{
+    border:2px solid #236397;
+    border-radius: 24px;
+}
 .fifth-sec .service{
     position: relative;
 }
