--- a/css/inner-page.css
+++ b/css/inner-page.css
@@ -140,8 +140,8 @@ section.chooes-sec:after {
 }
 .chooes-sec .text-part h3{
     font-size: 38px;
-    color: #1E1E1E;
-    line-height: 40px;
+    color: rgba(90, 90, 90, 1);
+    line-height: 47px;
     font-weight: 600;
 }
 .chooes-sec .chooes-content h4, .core-value .chooes-content h4{
@@ -673,9 +673,9 @@ section.contact-details:before {
     height: 300px;
     border-radius: 100%;
     position: absolute;
-    top: 0;
+    top: -50px;
     left: -100px;
-    filter: blur(200px);
+    filter: blur(100px);
 }
 section.trandmark h2 {
     font-size: 22px;
@@ -721,6 +721,17 @@ section.trandmark p{
     }
 }
 @media (max-width: 767px) {
+    .work-sec .common-title{
+        text-align: left;
+    }
+    .about-sec .common-title{
+        text-align: left;
+    }
+    section.about-sec:before{
+        width: 200px;
+        height: 200px;
+        filter: blur(100px);
+    }
     .inner-banner-sec{
         margin-top: 110px;
     }
@@ -859,6 +870,16 @@ section.trandmark p{
         font-size: 40px;
         line-height: 50px;
     }
+    .our-service-sec .common-title {
+        text-align: left;
+    }
+    section.contact-details:before{
+        width: 150px;
+        height: 150px;
+        top: -20px;
+        left: -50px;
+        filter: blur(50px);
+    }
 }
 @media only screen and (max-width: 480px) {
     .dell-partner h3{
@@ -888,16 +909,16 @@ section.trandmark p{
         height: 80px;
     }
     .dev-process-sec .development h4{
-        font-size: 20px;
-        line-height: 28px;
+        font-size: 18px;
+        line-height: 24px;
         padding-top: 10px;
     }
     .dev-process-sec .development p {
-        font-size: 18px;
-        line-height: 24px;
+        font-size: 16px;
+        line-height: 22px;
     }
     .dev-process-sec .development{
-        padding: 30px;
+        padding: 20px 10px;
     }
     .popup-content{
         padding: 20px 20px;
@@ -947,5 +968,19 @@ section.trandmark p{
     .future-image h2 {
         font-size: 24px;
         line-height: 34px;
+    }
+    section.achievement p {
+        font-size: 20px;
+        line-height: 23px;
+    }
+    section.achievement h2{
+        padding-bottom: 12px;
+    }
+    section.achievement:before{
+        top: -50px;
+        left: 0px;
+        width: 200px;
+        height: 200px;
+        filter: blur(80px);
     }
 }
